--- a/CSS/css.css
+++ b/CSS/css.css
@@ -1,5 +1,5 @@
-body{
-   background-color: #dadada; 
+.body{
+   background-color: #f1f3f6; 
 }
 .imagen{
     width: 300px;
@@ -12,8 +12,56 @@ body{
     width: 500px;
 }
 .form{
+    width: 280px;
+    height: 250px;
     background-color: #ffffff;
     margin-left: 50px;
     padding: 10px;
     border-radius: 10px;
+    text-align: center;
+}
+
+.link a{
+    text-decoration: none;
+    color: #3c85dd;
+    border-radius: 2px;
+}
+
+.boton1{
+    background-color: #1977f1;
+    color: #fafcff;
+    border-radius: 4px;
+    width: 255px;
+    height: 30px;
+    margin-bottom: 15px;
+    border: none;
+}
+
+.boton2{
+    margin-top: 15px;
+    background-color: #41b729;
+    color: #fafcff;
+    height: 30px;
+    border-radius: 4px;
+    border: none;
+}
+.contenedor-campos
+{
+    margin-bottom: 15px;
+    border: none;
+
+}
+
+.contenedor-campos input{
+    width: 250px;
+    height: 30px;
+    border-radius: 4px;
+}
+.botonabajo{
+    margin-top: 30px;
+    height: 50px;
+    border-top: 1px solid #a4a4a4;
+}
+p{
+    font-family: Arial, Helvetica, sans-serif;
 }
