--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,17 +5,20 @@
     width: 300px;
     height: 200px;
 }
-
+.p{
+    text-align: justify;
+    margin-bottom: 0;
+}
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr; /* Dos columnas de igual tamaño */
-    width: 500px;
+    justify-content: space-between
 }
 .form{
-    width: 280px;
-    height: 250px;
+    width: 380px;
+    height: 350px;
     background-color: #ffffff;
-    margin-left: 50px;
+    margin-left: 200px;
     padding: 10px;
     border-radius: 10px;
     text-align: center;
@@ -31,8 +34,8 @@
     background-color: #1977f1;
     color: #fafcff;
     border-radius: 4px;
-    width: 255px;
-    height: 30px;
+    width: 330px;
+    height: 40px;
     margin-bottom: 15px;
     border: none;
 }
@@ -41,9 +44,10 @@
     margin-top: 15px;
     background-color: #41b729;
     color: #fafcff;
-    height: 30px;
+    height: 35px;
     border-radius: 4px;
     border: none;
+    width: 150px;
 }
 .contenedor-campos
 {
@@ -53,9 +57,11 @@
 }
 
 .contenedor-campos input{
-    width: 250px;
-    height: 30px;
+    width: 330px;
+    height: 40px;
+    border: 1px solid #838383;
     border-radius: 4px;
+
 }
 .botonabajo{
     margin-top: 30px;
@@ -64,4 +70,13 @@
 }
 p{
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.centro{
+    margin-top: 100px;
+    height: 50%;
+}
+
+.escritura{
+    margin-top: 20px;
 }
